// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword should match snapshot 1`] = `
<div>
  <div
    className="undefined undefined"
  >
    <H1
      isCentered={true}
    >
      Forgot password
    </H1>
    <p
      className="pb-8"
    >
      Welcome to Reapit Foundations
    </p>
    <p
      className="pb-8"
    >
      Please check your email inbox for the next step to reset your password
    </p>
  </div>
  <div>
    <img
      alt="Reapit Graphic"
      src=""
    />
  </div>
</div>
`;

exports[`ForgotPassword should match snapshot 2`] = `
<div>
  <div
    className="undefined undefined"
  >
    <H1
      isCentered={true}
    >
      Forgot password
    </H1>
    <p
      className="pb-8"
    >
      Welcome to Reapit Foundations
    </p>
    <EnhanceForgotPasswordForm />
  </div>
  <div>
    <img
      alt="Reapit Graphic"
      src=""
    />
  </div>
</div>
`;
